--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -2,14 +2,16 @@
     display: flex;
     justify-content: space-between;
     padding: 0 40px;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #2ecc71;
     padding-bottom: 8px;
+    background-color: #ecf0f1;
 }
 
 .container {
     display: flex;
     gap: 20px;
     padding: 0 40px;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #2ecc71;
     padding-bottom: 8px;
+    background-color: #ecf0f1;
 }
