--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,27 +1,47 @@
-.form{
-        border: 2px solid black;
-        border-radius: 4px;
-        padding: 16px;
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-        background-color: aliceblue;
-        color: rgb(80, 80, 81);
-        max-width: 280px;
-
+.form {
+    border: 2px solid #4CAF50;
+    border-radius: 4px;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    background-color: #F5FFFA;
+    color: #4A4A4A;
+    max-width: 280px;
 }
-.formGroup{
+
+.formGroup {
     display: flex;
     flex-direction: column;
     margin-bottom: 16px;
 }
-.formFild{
-    color: rgb(80, 80, 81);
-    background-color: rgb(255, 255, 255);
-    border: 2px solid rgb(104, 102, 102);
+
+.formFild {
+    color: #4A4A4A;
+    background-color: #DFFFD8;
+    border: 2px solid #4CAF50;
     border-radius: 4px;
     padding: 4px;
 }
-.error{
-    color: red;
+
+.error {
+    color: #D32F2F;
+}
+
+button {
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    background-color: #4caf50;
+    /* Зелений фон кнопки */
+    color: #fff;
+    /* Білий текст на кнопці */
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+button:hover {
+    background-color: #45a049;
+    /* Темніший зелений при наведенні */
 }
